@@ -182,6 +182,7 @@ Chronological list of authors
   - Henok Ademtew
   - Uma D Kadam
   - Tamandeep Singh
+  - Mingyi Xue
 
 External code
 -------------
