@@ -88,6 +88,36 @@ class MOL2Parser(TopologyReaderBase):
     unknown atom types, they will be assigned an empty element record. If all
     atoms have unknown atom types, the elements attribute will not be set.
 
+    Dealing with optional fields:
+
+      1. ``resid`` will set to 1 when not provided.
+
+      2. If no atoms have ``resname`` field, resnames attribute will not be set;
+         If some atoms have ``resname`` while some do not,
+         :exc:`ValueError` will occur.
+    
+      3. If "NO_CHARGES" shows up in "@<TRIPOS>MOLECULE" section
+         and no atoms have the ``charge`` field, charges attribute will not be set;
+         If "NO_CHARGES" shows up while ``charge`` field appears,
+         :exc:`ValueError` will occur;
+         If a charge model is specified while some atoms don't have ``charge``,
+         :exc:`ValueError` will occur as well.
+
+    Raises
+    ------
+    ValueError
+      If some atoms have the optional field ``resname`` (aka ``subst_name``)
+      while some do not.
+
+    ValueError
+      If "NO_CHARGES" shows up in "@<TRIPOS>MOLECULE" section while
+      some atoms have the optional field ``charge``.
+
+    ValueError
+      If a charge model is specified in "@<TRIPOS>MOLECULE" section while
+      some atoms do not have the optional field ``charge``.
+
+
     .. versionchanged:: 0.9
        Now subclasses TopologyReaderBase
     .. versionchanged:: 0.20.0
@@ -95,8 +125,10 @@ class MOL2Parser(TopologyReaderBase):
        Ignores status bit strings
     .. versionchanged:: 2.0.0
        Bonds attribute is not added if no bonds are present in MOL2 file
-    .. versionchanged: 2.0.0
+    .. versionchanged:: 2.0.0
        Parse elements from atom types.
+    .. versionchanged:: 2.2.0
+       Read MOL2 files with optional columns omitted.
     """
     format = 'MOL2'
 
@@ -148,9 +180,36 @@ class MOL2Parser(TopologyReaderBase):
         resids = []
         resnames = []
         charges = []
-
+        has_charges = sections['molecule'][3].strip() != 'NO_CHARGES'
         for a in atom_lines:
-            aid, name, x, y, z, atom_type, resid, resname, charge = a.split()[:9]
+            columns = a.split()
+            if len(columns) >= 9:
+                aid, name, x, y, z, atom_type, \
+                    resid, resname, charge = columns[:9]
+            elif len(columns) < 6:
+                raise ValueError(f"The @<TRIPOS>ATOM block in mol2 file"
+                                 f" {os.path.basename(self.filename)}"
+                                 f" should have at least 6 fields to be"
+                                 f" unpacked: atom_id atom_name x y z"
+                                 f" atom_type [subst_id[subst_name"
+                                 f" [charge [status_bit]]]]")
+            else:
+                aid, name, x, y, z, atom_type = columns[:6]
+                id_name_charge = [1, None, None]
+                for i in range(6, len(columns)):
+                    id_name_charge[i-6] = columns[i]
+                resid, resname, charge = id_name_charge
+            if has_charges:
+                if charge is None:
+                    raise ValueError(f"The mol2 file {self.filename}"
+                                     f" indicates a charge model"
+                                     f"{sections['molecule'][3]}, but"
+                                     f" no charge provided in line: {a}")
+            else:
+                if charge is not None:
+                    raise ValueError(f"The mol2 file {self.filename}"
+                                     f" indicates no charges, but charge"
+                                     f" {charge} provided in line: {a}.")
 
             ids.append(aid)
             names.append(name)
@@ -182,7 +241,8 @@ class MOL2Parser(TopologyReaderBase):
         attrs.append(Atomids(np.array(ids, dtype=np.int32)))
         attrs.append(Atomnames(np.array(names, dtype=object)))
         attrs.append(Atomtypes(np.array(types, dtype=object)))
-        attrs.append(Charges(np.array(charges, dtype=np.float32)))
+        if has_charges:
+            attrs.append(Charges(np.array(charges, dtype=np.float32)))
         attrs.append(Masses(masses, guessed=True))
 
         if not np.all(validated_elements == ''):
@@ -191,12 +251,21 @@ class MOL2Parser(TopologyReaderBase):
         resids = np.array(resids, dtype=np.int32)
         resnames = np.array(resnames, dtype=object)
 
-        residx, resids, (resnames,) = squash_by(
-            resids, resnames)
-        n_residues = len(resids)
-        attrs.append(Resids(resids))
-        attrs.append(Resnums(resids.copy()))
-        attrs.append(Resnames(resnames))
+        if np.all(resnames):
+            residx, resids, (resnames,) = squash_by(
+                resids, resnames)
+            n_residues = len(resids)
+            attrs.append(Resids(resids))
+            attrs.append(Resnums(resids.copy()))
+            attrs.append(Resnames(resnames))
+        elif not np.any(resnames):
+            residx, resids, _ = squash_by(resids,)
+            n_residues = len(resids)
+            attrs.append(Resids(resids))
+            attrs.append(Resnums(resids.copy()))
+        else:
+            raise ValueError(f"Some atoms in the mol2 file {self.filename}"
+                             f" have subst_name while some do not.")
 
         attrs.append(Segids(np.array(['SYSTEM'], dtype=object)))
 
